--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: repeateR
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Parse and analyse RepeatMasker output
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Author: person("David", "Winter", email = "david.winter@gmail.com", role=c("aut", "cre"))
+Maintainer: The package maintainer <david.winter@gmail.com>
+Description: Read the standard output format from 
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
