--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,5 +8,6 @@ Description: Read the standard output format from
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Depends: R (>= 4.0)
 Suggests: testthat
 RoxygenNote: 6.0.1
