--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,5 +9,10 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Depends: R (>= 4.0)
-Suggests: testthat
-RoxygenNote: 6.0.1
+Suggests: testthat,
+    knitr,
+    rmarkdown
+RoxygenNote: 7.1.1
+VignetteBuilder: knitr
+LinkingTo: Rcpp
+Imports: Rcpp
