Start on code for summarising and filtering files

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,9 @@ Description: Read the standard output format from
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-Depends: R (>= 4.0)
+Depends: R (>= 4.0),
+         dplyr,
+         stringr
 Suggests: testthat,
     knitr,
     rmarkdown
