--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,12 @@
 S3method(print,repeat_table)
 export(filter_tclass)
 export(read_rm)
+export(summarise_rm_ID)
+export(summarise_rm_class)
+export(summarise_rm_family)
 export(tidy_rm)
+importFrom(dplyr,group_by)
+importFrom(dplyr,n)
+importFrom(dplyr,summarise)
 importFrom(stringr,str_split)
 importFrom(stringr,str_trim)
