Add RM -> bed fxns

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,12 @@
 S3method(print,repeat_table)
 export(filter_tclass)
 export(read_rm)
+export(rm_to_bed)
 export(summarise_rm_ID)
 export(summarise_rm_class)
 export(summarise_rm_family)
 export(tidy_rm)
+export(write_bed)
 importFrom(dplyr,group_by)
 importFrom(dplyr,n)
 importFrom(dplyr,summarise)
