--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,11 +10,10 @@ Encoding: UTF-8
 LazyData: true
 Depends: R (>= 4.0),
          dplyr,
-         stringr
+         stringr,
+         data.table
 Suggests: testthat,
     knitr,
     rmarkdown
 RoxygenNote: 7.1.1
 VignetteBuilder: knitr
-LinkingTo: Rcpp
-Imports: Rcpp
