--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,8 @@ export(summarise_rm_class)
 export(summarise_rm_family)
 export(tidy_rm)
 export(write_bed)
+import(data.table)
 importFrom(dplyr,group_by)
-importFrom(dplyr,n)
 importFrom(dplyr,summarise)
 importFrom(stringr,str_split)
 importFrom(stringr,str_trim)
