--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(Mb_lab)
 export(filter_tclass)
 export(read_rm)
 export(rm_to_bed)
+export(rm_to_bed12)
 export(summarise_rm_ID)
 export(summarise_rm_class)
 export(summarise_rm_family)
