add pallete fxn to Namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(Gb_lab)
 export(Kb_lab)
 export(Mb_lab)
 export(filter_tclass)
+export(make_TE_pallete)
 export(read_rm)
 export(rm_to_bed)
 export(rm_to_bed12)
