--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,repeat_table)
 export(Gb_lab)
 export(Kb_lab)
 export(Mb_lab)
+export(filter_by_tclass)
 export(filter_tclass)
 export(make_TE_pallete)
 export(read_rm)
